<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/controller_dest">

    <fragment
        android:id="@+id/controller_dest"
        android:name="com.myrgb.ledcontroller.feature.rgbcontroller.ControllerFragment"
        android:label="@string/controller_dest_label"
        tools:layout="@layout/fragment_controller">
        <action
            android:id="@+id/action_controller_dest_to_ipAddressListFragment"
            app:destination="@id/ip_address_list_dest" />
    </fragment>
    <fragment
        android:id="@+id/alarm_list_dest"
        android:name="com.myrgb.ledcontroller.feature.rgbalarmclock.list.RgbAlarmListFragment"
        android:label="@string/alarm_list_dest_label"
        tools:layout="@layout/fragment_rgb_alarm_list">
        <action
            android:id="@+id/action_alarm_list_to_alarm_add_edit"
            app:destination="@id/alarm_add_edit_dest" />
    </fragment>
    <fragment
        android:id="@+id/rgb_show_dest"
        android:name="com.myrgb.ledcontroller.feature.rgbshow.RgbShowFragment"
        android:label="@string/rgb_show_dest_label"
        tools:layout="@layout/fragment_rgb_show" />
    <fragment
        android:id="@+id/alarm_add_edit_dest"
        android:name="com.myrgb.ledcontroller.feature.rgbalarmclock.addedit.RgbAlarmAddEditFragment"
        android:label="@string/alarm_add_edit_dest_label"
        tools:layout="@layout/fragment_rgb_alarm_add_edit">
        <argument
            android:name="alarm_time"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_alarm_add_edit_to_alarm_list"
            app:destination="@id/alarm_list_dest" />
    </fragment>
    <fragment
        android:id="@+id/ip_address_list_dest"
        android:name="com.myrgb.ledcontroller.feature.ipsettings.IpAddressListFragment"
        android:label="@string/ip_address_list_dest_label"
        tools:layout="@layout/fragment_ip_address_list">
        <action
            android:id="@+id/action_ip_address_list_dest_to_addIpAddressDialog"
            app:destination="@id/ip_address_add_edit_dialog_dest" />
    </fragment>
    <dialog
        android:id="@+id/ip_address_add_edit_dialog_dest"
        android:name="com.myrgb.ledcontroller.feature.ipsettings.addedit.IpAddressAddEditDialogFragment"
        tools:layout="@layout/dialog_ip_address_add_edit">
        <argument
            android:name="ip_address"
            android:defaultValue=""
            app:argType="string" />
    </dialog>
</navigation>