<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_add_controller"
        style="@style/Widget.LedControllerV2.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_rgb_controller"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="@id/tv_add_controller"
        app:layout_constraintTop_toBottomOf="@id/tv_add_controller">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ip_address"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_ip_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_ip" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btn_add_ip_dialog"
        app:layout_constraintTop_toTopOf="@id/btn_add_ip_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>